chore: add font size and improvements when handle error
