# openapi-administration.json
@@ -734,6 +734,12 @@
                                     "template": {
                                         "type": "string",
                                         "description": "Template to signature text"
+                                    },
+                                    "fontSize": {
+                                        "type": "number",
+                                        "format": "double",
+                                        "default": 6,
+                                        "description": "Font size used when print the parsed text of this template at PDF file"
                                     }
                                 }
                             }
@@ -788,10 +794,53 @@
                                                 "data": {
                                                     "type": "object",
                                                     "required": [
-                                                        "parsed"
+                                                        "parsed",
+                                                        "fontSize"
                                                     ],
                                                     "properties": {
                                                         "parsed": {
+                                                            "type": "string"
+                                                        },
+                                                        "fontSize": {
+                                                            "type": "number",
+                                                            "format": "double"
+                                                        }
+                                                    }
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "required": [
+                                        "ocs"
+                                    ],
+                                    "properties": {
+                                        "ocs": {
+                                            "type": "object",
+                                            "required": [
+                                                "meta",
+                                                "data"
+                                            ],
+                                            "properties": {
+                                                "meta": {
+                                                    "$ref": "#/components/schemas/OCSMeta"
+                                                },
+                                                "data": {
+                                                    "type": "object",
+                                                    "required": [
+                                                        "error"
+                                                    ],
+                                                    "properties": {
+                                                        "error": {
                                                             "type": "string"
                                                         }
                                                     }
@@ -886,10 +935,53 @@
                                                 "data": {
                                                     "type": "object",
                                                     "required": [
-                                                        "parsed"
+                                                        "parsed",
+                                                        "fontSize"
                                                     ],
                                                     "properties": {
                                                         "parsed": {
+                                                            "type": "string"
+                                                        },
+                                                        "fontSize": {
+                                                            "type": "number",
+                                                            "format": "double"
+                                                        }
+                                                    }
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "required": [
+                                        "ocs"
+                                    ],
+                                    "properties": {
+                                        "ocs": {
+                                            "type": "object",
+                                            "required": [
+                                                "meta",
+                                                "data"
+                                            ],
+                                            "properties": {
+                                                "meta": {
+                                                    "$ref": "#/components/schemas/OCSMeta"
+                                                },
+                                                "data": {
+                                                    "type": "object",
+                                                    "required": [
+                                                        "error"
+                                                    ],
+                                                    "properties": {
+                                                        "error": {
                                                             "type": "string"
                                                         }
                                                     }
